# typosquat

./: pyproject.toml
src/actors/: analyser.py  clone_finder.py  investigator.py  presenter.py
src/enums/: threat_level.py
src/models/: original_domain.py  typosquat.py
src/scripts/: main.py  typosquat_analysis.ipynb
