[tool.poetry]
name = "typesquat_analyser"
description = "TypeSquat Analysis"
version = "0.0.1"
authors = [
    "Ronan"
]

packages = [
    { include = "actors", from = "src" },
    { include = "enums", from = "src" },
    { include = "models", from = "src" }
]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.13.0"
aiohttp = "^3.8.5"
levenshtein = "^0.22.0"
